# classificador_dominio

./: .env.example  .gitignore  Dataset_Ajustado_com_Cabe_alho_Correto.csv  README.md  SVM_OpenMetadata_pipeline_V1_MCP_Tags.ipynb  V5.7.py  V5.8.py  api.py  dataset.csv  dataset_V8.csv  dataset_V9.csv  gui_app.py  gui_openmetadata.py  openmetadata_client.py  pipeline_core.py  pyproject.toml  requirements.txt  run_pipeline.py  texto_preprocessado.csv
data/: csv_para_previsao.csv
scripts/: run_pipeline.py
src/classificador_dominio/: __init__.py  api.py  gui_app.py  gui_openmetadata.py  openmetadata_client.py  paths.py  pipeline_core.py
tests/: test_imports.py
