[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "classificador-dominio"
version = "1.0.0"
description = "Classificador de domínios de tabelas (TF-IDF + SVM) com integração OpenMetadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "joblib>=1.1.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
]
jupyter = [
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
